--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1a2edbc0cd3a476612ad0508c274d030"
+    ></script>
   </body>
 </html>
